[tool.poetry]
name = "vocexcel"
version = "0.4.0"
description = """Another Excel to RDF converter for SKOS vocabs, \
  but one that includes profile-based validation of results."""
authors = [
  "peterphilips <peter.philips@surroundaustralia.com>",
  "dalito <david.linke@catalysis.de>",
]

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.9"
rdflib = "^6.1.1"
pydantic = "^1.9.0"
pyshacl = "^0.18.1"
dateutils = "^0.6.12"
colorama = "^0.4.4"
Pillow = "^9.1.0"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^23.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vocexcel = "vocexcel.convert:main"
